# agent-orchestrator

./: .gitignore  main.py  pyproject.toml  readme.md  requirements.txt
agents/: __init__.py  copilot_interface.py  copilot_models.py  github_client.py  issue_consolidator.py  issue_models.py
config/: README.md  models.yaml  orchestrator-config.yaml  prompts.yaml
data/: README.md
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  COPILOT_INTEGRATION.md  CROSS_PLATFORM.md  EXECUTOR.md  GUI_EXPANSION.md  IMPLEMENTATION_SUMMARY.md  ISSUE_CONSOLIDATOR.md  MIGRATION.md  OLLAMA_SETUP.md  PATCH_IMPLEMENTATION_SUMMARY.md  RAG_SYSTEM.md  README.md  STATE_MANAGEMENT.md  USER_GUIDE.md  VERIFICATION.md  patch_based_copilot_integration.md
docs/examples/: README.md  consolidated-issues-example.json  consolidated-issues-example.md  development-config.yaml  issue_consolidator_usage.py  llm_client_usage.py  planner_usage.py  production-config.yaml  rag_usage.py  sample-issue-doc.json  sample-issue-doc.md  state_usage.py
orchestrator/: __init__.py  config.py  exceptions.py  executor.py  llm_client.py  models.py  phase_validator.py  planner.py  planner_ui.py  prompt_builder.py  schema.py  state.py  state_utils.py  verification_models.py  verifier.py
repo_brain/: __init__.py  context_builder.py  embeddings.py  exceptions.py  indexer.py  models.py  rag_system.py  retriever.py
scripts/: example_run.ps1  orchestrator.ps1  orchestrator.sh  verify_patch_implementation.py
templates/: README.md  consolidated_issues.md.j2  copilot_prompt.md.j2  feedback_spec.md.j2  findings.md.j2  phase_detail.md.j2  phase_plan.md.j2  phase_spec.md.j2
tests/: __init__.py  test_config.py  test_copilot_interface.py  test_executor.py  test_github_client.py  test_issue_consolidator.py  test_patch_application.py  test_planner.py  test_state.py  test_verifier.py
