[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-orchestrator"
version = "0.1.0"
description = "Local AI-powered orchestration system for automated software development workflows"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Agent Orchestrator Team"}
]
keywords = [
    "orchestration",
    "ai",
    "llm",
    "ollama",
    "automation",
    "copilot",
    "rag",
    "code-generation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]

dependencies = [
    "ollama>=0.1.0",
    "chromadb>=0.4.0",
    "tree-sitter>=0.20.0",
    "PyYAML>=6.0",
    "aiosqlite>=0.19.0",
    "jinja2>=3.1.0",
    "gitpython>=3.1.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "click>=8.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0"
]

[project.urls]
Homepage = "https://github.com/Jacobdrosol/agent-orchestrator"
Documentation = "https://github.com/Jacobdrosol/agent-orchestrator/tree/main/docs"
Repository = "https://github.com/Jacobdrosol/agent-orchestrator"
Issues = "https://github.com/Jacobdrosol/agent-orchestrator/issues"

[project.scripts]
orchestrator = "orchestrator.main:cli"

[tool.setuptools]
packages = ["orchestrator", "repo_brain", "agents", "tests"]

[tool.setuptools.package-data]
orchestrator = ["py.typed"]
repo_brain = ["py.typed"]
agents = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = []
fixable = ["ALL"]
unfixable = []
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".tox",
    ".venv",
    "build",
    "dist",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "tree_sitter.*",
    "ollama.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose"
]
